UPDATE: Add running the game section in README